# awesome-rust-web-app

./: .env  .env.example  .env.test  .gitignore  Cargo.toml  README.md
docs/: features.md
migrations/2021-03-22-041835_create_user/: up.sql
src/: app.rs  db.rs  error.rs  lib.rs  main.rs  message_handler.rs  prelude.rs  route.rs  schema.rs  service.rs  translation.rs
src/app/: user.rs
src/controller/: login_controller.rs  mod.rs  register_controller.rs  user.rs
src/message/: user.rs
src/message_handler/: create_user_handler.rs  login_handler.rs  mod.rs  user.rs
src/middleware/: mod.rs  negotiate_language.rs  negotiator.rs
src/model/: mod.rs  user.rs
src/service/: jwt.rs  mod.rs
src/service/security/: encoder.rs
src/service/translation/: translator.rs
tests/: functional.rs  integration_test.rs
tests/functional/: login.rs  register.rs
translations/en-US/: en_US.ftl
translations/zh-CN/: zh_CN.ftl
