[package]
name = "ssrproxy"
version = "0.1.0"
authors = ["Vidy Videni <vidy.videni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
oauth2 = { version = "3.0", features = ["futures-01"] }
diesel = { version = "1.4.6", features = ["mysql", "r2d2"] }
chrono = "0.4.6"
serde = "1"
validator = { version = "0.13", features = ["derive"] }
futures = "0.3.13"
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4"
actix-cors = "0.5.4"
actix = "0.11.1"
num_cpus = "1.13.0"
actix_cors = "0.5.4"