[package]
name = "actix-web-tutorial"
version = "0.1.0"
authors = ["Vidy Videni <vidy.videni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { version = "3.0", features = ["futures-01"] }
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "chrono",  "uuidv07", "serde_json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4.6"
serde = "1"
serde_json = "1.0.64"
validator = { version = "0.13", features = ["derive"] }
futures = "0.3.13"
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4"
actix = "0.10"
actix-rt = "1.1.1"
actix-web = "3.3.2"
num_cpus = "1.13.0"
actix-cors = "0.5.4"
failure = "0.1.8"
libreauth = "0.14.0"
lazy_static = "1.4.0"
jsonwebtoken = "7.2.0"
validator_derive = "0.13.0"
backtrace = "0.3"
serde_derive = "1.0"
blob-uuid = "0.4.0"